tests/dataset/tpc-ds/compiler/kotlin/q71.error
kotlinc: exit status 1
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/tmp/q71.kt:66:19: error: unresolved reference: concat
val union_sales = concat(run {
                  ^
/tmp/q71.kt:129:23: error: unresolved reference. None of the following candidates is applicable because of receiver type mismatch: 
@InlineOnly public inline operator fun BigDecimal.unaryMinus(): BigDecimal defined in kotlin
@InlineOnly public inline operator fun BigInteger.unaryMinus(): BigInteger defined in kotlin
        mutableListOf(-sum(run {
                      ^
